blockml/test/errors/06_join_sql_where/e157/e157_one.view
view: e157_one
table: 1
fields:
- dimension: dim5
  sql: 555